namespace IronvaleFleetHub.Api.Services;

public sealed class NotificationTemplateRenderer
{
    public EmailDeliveryRequest RenderEmail(string to, string type, string title, string message)
    {
        var subject = $"[Ironvale] {title}";
        var htmlBody = $"""
            <!DOCTYPE html>
            <html>
            <head><meta charset="utf-8" /></head>
            <body style="font-family: Arial, sans-serif; padding: 20px;">
                <h2 style="color: #2c3e50;">{title}</h2>
                <p>{message}</p>
                <hr style="border: 1px solid #eee;" />
                <p style="font-size: 12px; color: #999;">
                    Event type: {type}<br/>
                    This message was generated by Ironvale Fleet Hub.
                </p>
            </body>
            </html>
            """;
        var textBody = $"{title}\n\n{message}\n\nEvent type: {type}";

        return new EmailDeliveryRequest(to, subject, htmlBody, textBody);
    }

    public SmsDeliveryRequest RenderSms(string to, string type, string title, string message)
    {
        var smsMessage = $"[Ironvale] {title}: {message}";
        if (smsMessage.Length > 160)
            smsMessage = smsMessage[..157] + "...";

        return new SmsDeliveryRequest(to, smsMessage);
    }
}
