@startuml class_diagram
!theme plain
!pragma layout smetana
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam defaultFontSize 11

title Communication Services Local Delivery - Class Diagram

interface INotificationDeliveryService {
  +DeliverAsync(envelope, ct)
}

interface IEmailChannel {
  +SendAsync(request, ct)
}

interface ISmsChannel {
  +SendAsync(request, ct)
}

class NotificationDispatchService {
  +DispatchAsync(userId, type, title, message)
}
class NotificationPreferenceEvaluator
class NotificationTemplateRenderer
class DevSmtpEmailChannel
class FileDropEmailChannel
class CompositeEmailChannel
class ConsoleSmsChannel

class NotificationEnvelope {
  +EventType: string
  +Title: string
}

class DeliveryAttemptResult {
  +Success: bool
  +Target: string
}

INotificationDeliveryService <|.. NotificationDispatchService
NotificationDispatchService --> NotificationPreferenceEvaluator
NotificationDispatchService --> NotificationTemplateRenderer
NotificationDispatchService --> IEmailChannel
NotificationDispatchService --> ISmsChannel
IEmailChannel <|.. DevSmtpEmailChannel
IEmailChannel <|.. FileDropEmailChannel
IEmailChannel <|.. CompositeEmailChannel
ISmsChannel <|.. ConsoleSmsChannel
NotificationDispatchService --> NotificationEnvelope
NotificationDispatchService --> DeliveryAttemptResult

@enduml
